// Code generated by tableau (protogen v0.7.1). DO NOT EDIT.
// clang-format off

syntax = "proto3";

package protoconf;

import "common/common.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "tableau/protobuf/tableau.proto";

option go_package = "github.com/tableauio/tableau/test/functest/protoconf";
option (tableau.workbook) = {name:"excel/metasheet/SheetMode#*.csv" namerow:1 typerow:2 noterow:3 datarow:4 sep:"," subsep:":"};

enum CatType {
  option (tableau.etype) = {name:"EnumType" note:"CatType note"};

  CAT_TYPE_INVALID = 0;
  CAT_TYPE_RAGDOLL = 1 [(tableau.evalue).name = "Ragdoll"];
  CAT_TYPE_PERSIAN = 2 [(tableau.evalue).name = "Persian"];
  CAT_TYPE_SPHYNX = 3 [(tableau.evalue).name = "Sphynx"];
}

enum DogType {
  option (tableau.etype) = {name:"EnumType" note:"DogType note"};

  DOG_TYPE_INVALID = 0;
  DOG_TYPE_POODLE = 1 [(tableau.evalue).name = "Poodle"];
  DOG_TYPE_BULLDOG = 2 [(tableau.evalue).name = "Bulldog"];
  DOG_TYPE_DACHSHUND = 3 [(tableau.evalue).name = "Dachshund"];
}

enum BirdType {
  option (tableau.etype) = {name:"EnumType" note:"BirdType note"};

  BIRD_TYPE_INVALID = 0;
  BIRD_TYPE_CANARY = 1 [(tableau.evalue).name = "Canary"];
  BIRD_TYPE_WOODPECKER = 2 [(tableau.evalue).name = "Woodpecker"];
  BIRD_TYPE_OWL = 3 [(tableau.evalue).name = "Owl"];
}

message EnumTypeReuseInBook {
  option (tableau.worksheet) = {name:"EnumTypeReuseInBook"};

  map<int32, Item> item_map = 1 [(tableau.field) = {key:"ID" layout:LAYOUT_VERTICAL}];
  message Item {
    int32 id = 1 [(tableau.field) = {name:"ID"}]; // Item’s ID
    protoconf.ItemType type = 2 [(tableau.field) = {name:"Type"}]; // Item’s type
    protoconf.BirdType bird_type = 3 [(tableau.field) = {name:"BirdType"}]; // Bird’s type
    int32 price = 4 [(tableau.field) = {name:"Price"}]; // Item’s price
  }
}

enum ItemType {
  option (tableau.etype) = {name:"ItemType"};

  ITEM_TYPE_INVALID = 0;
  ITEM_TYPE_FRUIT = 1 [(tableau.evalue).name = "Fruit"];
  ITEM_TYPE_EQUIP = 2 [(tableau.evalue).name = "Equip"];
  ITEM_TYPE_BOX = 3 [(tableau.evalue).name = "Box"];
}

message TaskReward {
  option (tableau.struct) = {name:"StructTaskReward"};

  uint32 id = 1 [(tableau.field) = {name:"ID" prop:{range:"1,10"}}];
  int32 num = 2 [(tableau.field) = {name:"Num"}];
  protoconf.FruitType fruit_type = 3 [(tableau.field) = {name:"FruitType"}];
  repeated int32 feature_list = 4 [(tableau.field) = {name:"Feature" layout:LAYOUT_INCELL}];
  map<int32, string> prop_map = 5 [(tableau.field) = {name:"Prop" layout:LAYOUT_INCELL}];
  Detail detail = 6 [(tableau.field) = {name:"Detail" span:SPAN_INNER_CELL}];
  message Detail {
    protoconf.ItemType type = 1 [(tableau.field) = {name:"Type"}];
    string name = 2 [(tableau.field) = {name:"Name"}];
    string desc = 3 [(tableau.field) = {name:"Desc"}];
  }
}

message Tree {
  option (tableau.struct) = {name:"StructType" note:"Tree note"};

  uint32 id = 1 [(tableau.field) = {name:"ID"}];
  int32 num = 2 [(tableau.field) = {name:"Num"}];
}

message Pet {
  option (tableau.struct) = {name:"StructType" note:"Pet note"};

  int32 kind = 1 [(tableau.field) = {name:"Kind"}];
  repeated string tip_list = 2 [(tableau.field) = {name:"Tip" layout:LAYOUT_INCELL}];
}

message FruitShop {
  option (tableau.struct) = {name:"StructType" note:"FruitShop note"};

  protoconf.FruitType fruit_type = 1 [(tableau.field) = {name:"FruitType"}];
  map<int32, string> prop_map = 2 [(tableau.field) = {name:"Prop" layout:LAYOUT_INCELL}];
}

message StructTypeReuseInBook {
  option (tableau.worksheet) = {name:"StructTypeReuseInBook"};

  map<uint32, Reward> reward_map = 1 [(tableau.field) = {key:"ID" layout:LAYOUT_VERTICAL}];
  message Reward {
    uint32 id = 1 [(tableau.field) = {name:"ID"}]; // Reward’s ID
    protoconf.Pet pet = 2 [(tableau.field) = {name:"Pet"}];
    protoconf.TaskReward task_reward = 3 [(tableau.field) = {name:"TaskReward"}];
  }
}

message SimpleTarget {
  option (tableau.union) = {name:"UnionSimpleTarget"};

  Type type = 9999 [(tableau.field) = {name:"Type"}];
  oneof value {
    option (tableau.oneof) = {field:"Field"};

    PVP pvp = 1; // Bound to enum value: TYPE_PVP.
    PVE pve = 2; // Bound to enum value: TYPE_PVE.
    Skill skill = 3; // Bound to enum value: TYPE_SKILL.
  }

  enum Type {
    TYPE_INVALID = 0;
    TYPE_PVP = 1 [(tableau.evalue).name = "AliasPVP"];
    TYPE_PVE = 2 [(tableau.evalue).name = "AliasPVE"];
    TYPE_SKILL = 3 [(tableau.evalue).name = "AliasSkill"];
  }

  message PVP {
    uint32 id = 1 [(tableau.field) = {name:"ID"}]; // Note
    int64 damage = 2 [(tableau.field) = {name:"Damage"}]; // Note
    protoconf.FruitType type = 3 [(tableau.field) = {name:"Type"}]; // Note
  }
  message PVE {
    repeated uint32 hero_list = 1 [(tableau.field) = {name:"Hero" layout:LAYOUT_INCELL}]; // Note
    map<int32, int64> dungeon_map = 2 [(tableau.field) = {name:"Dungeon" layout:LAYOUT_INCELL}]; // Note
  }
  message Skill {
    google.protobuf.Timestamp start_time = 1 [(tableau.field) = {name:"StartTime"}]; // Note
    google.protobuf.Duration duration = 2 [(tableau.field) = {name:"Duration"}]; // Note
  }
}

message TaskTarget {
  option (tableau.union) = {name:"UnionTaskTarget"};

  Type type = 9999 [(tableau.field) = {name:"Type"}];
  oneof value {
    option (tableau.oneof) = {field:"Field"};

    PVP pvp = 1; // Bound to enum value: TYPE_PVP.
    PVE pve = 2; // Bound to enum value: TYPE_PVE.
    Story story = 3; // Bound to enum value: TYPE_STORY.
    Hobby hobby = 4; // Bound to enum value: TYPE_HOBBY.
    Skill skill = 5; // Bound to enum value: TYPE_SKILL.
    // No field bound to enum value: TYPE_EMPTY.
  }

  enum Type {
    TYPE_INVALID = 0;
    TYPE_PVP = 1 [(tableau.evalue).name = "AliasPVP"];
    TYPE_PVE = 2 [(tableau.evalue).name = "AliasPVE"];
    TYPE_STORY = 3 [(tableau.evalue).name = "AliasStory"];
    TYPE_HOBBY = 4 [(tableau.evalue).name = "AliasHobby"];
    TYPE_SKILL = 5 [(tableau.evalue).name = "AliasSkill"];
    TYPE_EMPTY = 6 [(tableau.evalue).name = "AliasEmpty"];
  }

  message PVP {
    uint32 id = 1 [(tableau.field) = {name:"ID"}]; // Note
    int64 damage = 2 [(tableau.field) = {name:"Damage"}]; // Note
    repeated protoconf.FruitType type_list = 3 [(tableau.field) = {name:"Type" layout:LAYOUT_INCELL}]; // Note
  }
  message PVE {
    Mission mission = 1 [(tableau.field) = {name:"Mission" span:SPAN_INNER_CELL}]; // Note
    message Mission {
      uint32 id = 1 [(tableau.field) = {name:"ID"}];
      protoconf.ItemType type = 2 [(tableau.field) = {name:"Type"}];
    }
    repeated uint32 hero_list = 2 [(tableau.field) = {name:"Hero" layout:LAYOUT_INCELL}]; // Note
    map<int32, int64> dungeon_map = 3 [(tableau.field) = {name:"Dungeon" layout:LAYOUT_INCELL}]; // Note
  }
  message Story {
    protoconf.Item cost = 1 [(tableau.field) = {name:"Cost" span:SPAN_INNER_CELL}];
    map<int32, protoconf.FruitType> fruit_map = 2 [(tableau.field) = {name:"Fruit" layout:LAYOUT_INCELL}]; // Note
    map<int32, Flavor> flavor_map = 3 [(tableau.field) = {name:"Flavor" key:"Key" layout:LAYOUT_INCELL}]; // Note
    message Flavor {
      protoconf.FruitFlavor key = 1 [(tableau.field) = {name:"Key"}];
      protoconf.FruitType value = 2 [(tableau.field) = {name:"Value"}];
    }
  }
  message Hobby {
    map<int32, Flavor> flavor_map = 1 [(tableau.field) = {name:"Flavor" key:"Key" layout:LAYOUT_INCELL}]; // Note
    message Flavor {
      protoconf.FruitFlavor key = 1 [(tableau.field) = {name:"Key"}];
      protoconf.FruitType value = 2 [(tableau.field) = {name:"Value"}];
    }
    google.protobuf.Timestamp start_time = 2 [(tableau.field) = {name:"StartTime"}]; // Note
    google.protobuf.Duration duration = 3 [(tableau.field) = {name:"Duration"}]; // Note
  }
  message Skill {
    uint32 id = 1 [(tableau.field) = {name:"ID"}]; // Note
    int64 damage = 2 [(tableau.field) = {name:"Damage"}]; // Note
  }
}

message WishTarget {
  option (tableau.union) = {name:"UnionType" note:"WishTarget note"};

  Type type = 9999 [(tableau.field) = {name:"Type"}];
  oneof value {
    option (tableau.oneof) = {note:"WishTarget note" field:"Field"};

    Higher higher = 1; // Bound to enum value: TYPE_HIGHER.
    Richer richer = 2; // Bound to enum value: TYPE_RICHER.
  }

  enum Type {
    TYPE_INVALID = 0;
    TYPE_HIGHER = 1 [(tableau.evalue).name = "WishHigher"];
    TYPE_RICHER = 2 [(tableau.evalue).name = "WishRicher"];
  }

  message Higher {
    int32 height = 1 [(tableau.field) = {name:"Height"}];
  }
  message Richer {
    uint32 id = 1 [(tableau.field) = {name:"ID"}];
    map<int32, string> bank_map = 2 [(tableau.field) = {name:"Bank" layout:LAYOUT_INCELL}];
  }
}

message HeroTarget {
  option (tableau.union) = {name:"UnionType" note:"HeroTarget note"};

  Type type = 9999 [(tableau.field) = {name:"Type"}];
  oneof value {
    option (tableau.oneof) = {note:"HeroTarget note" field:"Field"};

    StarUp star_up = 1; // Bound to enum value: TYPE_STAR_UP.
    LevelUp level_up = 2; // Bound to enum value: TYPE_LEVEL_UP.
  }

  enum Type {
    TYPE_INVALID = 0;
    TYPE_STAR_UP = 1 [(tableau.evalue).name = "HeroStarUp"];
    TYPE_LEVEL_UP = 2 [(tableau.evalue).name = "HeroLevelUp"];
  }

  message StarUp {
    uint32 id = 1 [(tableau.field) = {name:"ID"}];
    int32 star = 2 [(tableau.field) = {name:"Star"}];
  }
  message LevelUp {
    repeated uint32 id_list = 1 [(tableau.field) = {name:"ID" layout:LAYOUT_INCELL}];
    int32 level = 2 [(tableau.field) = {name:"Level"}];
    bool super = 3 [(tableau.field) = {name:"Super"}];
  }
}

message BattleTarget {
  option (tableau.union) = {name:"UnionType" note:"BattleTarget note"};

  Type type = 9999 [(tableau.field) = {name:"Type"}];
  oneof value {
    option (tableau.oneof) = {note:"BattleTarget note" field:"Field"};

    PVP pvp = 1; // Bound to enum value: TYPE_PVP.
    PVE pve = 2; // Bound to enum value: TYPE_PVE.
  }

  enum Type {
    TYPE_INVALID = 0;
    TYPE_PVP = 1 [(tableau.evalue).name = "BattlePVP"];
    TYPE_PVE = 2 [(tableau.evalue).name = "BattlePVE"];
  }

  message PVP {
    int32 battle_id = 1 [(tableau.field) = {name:"BattleID"}];
    int64 damage = 2 [(tableau.field) = {name:"Damage"}];
  }
  message PVE {
    repeated int32 hero_id_list = 1 [(tableau.field) = {name:"HeroID" layout:LAYOUT_INCELL}];
    map<int32, int64> dungeon_map = 2 [(tableau.field) = {name:"Dungeon" layout:LAYOUT_INCELL}];
    Boss boss = 3 [(tableau.field) = {name:"Boss" span:SPAN_INNER_CELL}];
    message Boss {
      uint32 id = 1 [(tableau.field) = {name:"ID"}];
      int64 damage = 2 [(tableau.field) = {name:"Damage"}];
    }
  }
}

message UnionTypeReuseInBook {
  option (tableau.worksheet) = {name:"UnionTypeReuseInBook"};

  map<int32, Task> task_map = 1 [(tableau.field) = {key:"ID" layout:LAYOUT_VERTICAL}];
  message Task {
    int32 id = 1 [(tableau.field) = {name:"ID"}]; // ID
    int32 progress = 2 [(tableau.field) = {name:"Progress"}]; // Progress
    protoconf.TaskTarget task_target = 3 [(tableau.field) = {name:"TaskTarget"}];
    protoconf.HeroTarget hero_target = 4 [(tableau.field) = {name:"HeroTarget"}];
  }
}
